# Agentic-search

./: .LIMEENERGYCO_09_09_1999-EX-10-DISTRIBUTOR AGREEMENT.txt.segments.json  .gitignore  AGENTS.md  CLAUDE.md  FinanceBench.md  README.md  TODO.md  blog_post_vectorless_agentic_search.md  main.py  precise_extraction_agent.py  pyproject.toml  qa_results_20250907_180948.json  qa_results_20250907_182422.json  qa_results_20250907_215137.json  qa_results_20250908_075629.json  qa_results_20250908_184113.json  qa_results_20250909_082146.json  simple_agent.py  test_sample_qa.py  test_sequential_reading.py  test_simple_agent.py
contracts/: 2ThemartComInc_19990826_10-12G_EX-10.10_6700288_EX-10.10_Co-Branding Agreement_ Agency Agreement.txt  ADAMSGOLFINC_03_21_2005-EX-10.17-ENDORSEMENT AGREEMENT.txt  ADAPTIMMUNETHERAPEUTICSPLC_04_06_2017-EX-10.11-STRATEGIC ALLIANCE AGREEMENT.txt  ADIANUTRITION,INC_04_01_2005-EX-10.D2-RESELLER AGREEMENT.txt  ADUROBIOTECH,INC_06_02_2020-EX-10.7-CONSULTING AGREEMENT.txt  AFSALABANCORPINC_08_01_1996-EX-1.1-AGENCY AGREEMENT.txt  AIRSPANNETWORKSINC_04_11_2000-EX-10.5-Distributor Agreement.txt  ALAMOGORDOFINANCIALCORP_12_16_1999-EX-1-AGENCY AGREEMENT.txt  AMERICANPHYSICIANSCAPITALINC_03_31_2003-EX-10.26-AGENCY AGREEMENT.txt  AMERICASSHOPPINGMALLINC_12_10_1999-EX-10.2-SITE DEVELOPMENT AND HOSTING AGREEMENT.txt  ASHWORTHINC_01_29_1999-EX-10.(D)-PROMOTION AGREEMENT AND NANTZ COMMUNICATIONS, INC..txt  ASIANDRAGONGROUPINC_08_11_2005-EX-10.5-Reseller Agreement.txt  ATENTOSA_07_06_2020-EX-99.1-JOINT FILING AGREEMENT.txt  (+245 more)
src/: __init__.py  config.py  main.py  (+13 more)
(+262 files in other folders)
